syntax = "proto2";
option optimize_for = SPEED;
option java_package = "file";
message File {
        optional int32 chunkId = 1;
        optional bytes data = 2;
        required string filename = 3;
        optional int32 totalNoOfChunks = 4;  //total number of chunks of a requested file
        optional string file_id = 5; // can be a message digest of file. Will also serve as file validation code
}
enum RequestType {
        READ = 1;
        WRITE = 2;
        DELETE = 3;
}
message Request {
        required RequestType requestType = 1;
        File file = 2;
        required string requestId = 3;// UUID for a client request
}
message Response {
        required string requestId = 1;// UUID which maps to a client request
        // optional bool isAck = 2  [default = false];
        optional bool isSuccess = 2;
        // if !isSuccess, check payload for missing chunks
        oneof payload {
                File file = 3;
                // using array for all missing chunks, cmpe275-class protocol
                repeated int32 missingChunkids = 4 [packed=true];
        }
}
